--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmission.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmission.njk
@@ -66,7 +66,7 @@
   {% set defendantName = claim.claimData.defendant.name %}
   {% set amount = claim.totalAmountTillToday | numeral %}
 
-  {% if claim.response.paymentDate %}
+  {% if claim.response.paymentIntention.paymentDate %}
     {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
   {% endif %}
 
