claim reference changed to claim number
i changed 'claim reference' to 'claim number' in these two places

--- a/src/main/features/response/views/claim-details.njk
+++ b/src/main/features/response/views/claim-details.njk
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
-      <p><span class="bold-small">{{ t('Claim reference') }}:</span> {{ claim.claimNumber }}</p>
+      <p><span class="bold-small">{{ t('Claim number') }}:</span> {{ claim.claimNumber }}</p>
       <p><span class="bold-small">{{ t('Claim amount') }}:</span> {{ claim.totalAmountTillToday | numeral }}</p>
 
       {{ amountBreakdownTable('View amount breakdown', claim, interestData) }}
