--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmission.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmission.njk
@@ -62,6 +62,8 @@
 {% endmacro %}
 
 {% macro claimFullAdmissionForClaimantClaimDetails(claim) %}
+  <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
+
   {% set claimantName = claim.claimData.claimant.name %}
   {% set defendantName = claim.claimData.defendant.name %}
   {% set amount = claim.totalAmountTillToday | numeral %}
