--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -9,25 +9,29 @@
   <form novalidate method="post">
     {{ csrfProtection(csrf) }}
 
-    {% if draft.acceptPaymentMethod.accept.option === 'yes' %}
-      {% set acceptPaymentMethodResponse = 'I accept this amount' %}
-    {% else %}
-      {% set acceptPaymentMethodResponse = 'I reject this amount' %}
-    {% endif %}
-
-    {% if draft.settleAdmitted.admitted.option === 'yes' %}
-      {% set paymentPlanResponse = 'I accept this repayment plan' %}
-    {% else %}
-      {% set paymentPlanResponse = 'I reject this repayment plan' %}
-    {% endif %}
-
     {{ tableStart('yourResponse', 'Your response') }}
 
-    {{ row(label = 'Do you accept or reject the defendant’s admission?', bold= true, value = paymentPlanResponse,
-      changeLink = ClaimantResponsePaths.settleAdmittedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+    {% if draft.settleAdmitted %}
+      {% if draft.settleAdmitted.admitted.option === 'yes' %}
+        {% set settleAdmittedResponse = 'I accept this amount' %}
+      {% else %}
+        {% set settleAdmittedResponse = 'I reject this amount' %}
+      {% endif %}
 
-    {{ row(label = 'Do you accept the defendant’s repayment plan?', bold = true, value = paymentPlanResponse,
-      changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      {{ row(label = 'Do you accept or reject the defendant’s admission?', bold = true, value = settleAdmittedResponse,
+        changeLink = ClaimantResponsePaths.settleAdmittedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+    {% endif %}
+
+    {% if draft.acceptPaymentMethod %}
+      {% if draft.acceptPaymentMethod.accept.option === 'yes' %}
+        {% set acceptPaymentMethodResponse = 'I accept this repayment plan' %}
+      {% else %}
+        {% set acceptPaymentMethodResponse = 'I reject this repayment plan' %}
+      {% endif %}
+
+      {{ row(label = 'Do you accept the defendant’s repayment plan?', bold = true, value = acceptPaymentMethodResponse,
+        changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+    {% endif %}
 
     {{ tableEnd() }}
 
