Remove duplicate calls to translation functions

--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -34,13 +34,13 @@
           name = 'accept',
           options = [
           {
-            label: t('Yes'),
+            label: 'Yes',
             value: YesNoOption.YES.option,
             checked: (form.valueFor('accept') === YesNoOption.YES),
             hint: 'The claim will be put on hold. If the defendant doesn’t pay, you can ask the court to enforce payment.'
           },
           {
-            label: t('No - I’ll suggest my own'),
+            label: 'No - I’ll suggest my own',
             value: YesNoOption.NO.option,
             checked: (form.valueFor('accept') === YesNoOption.NO)
           }
