phone number content change
I changed 'contact' to 'phone' to match proto and cos it's better.

--- a/src/main/features/response/views/your-mobile.njk
+++ b/src/main/features/response/views/your-mobile.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, input, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'Add a contact number (optional)' %}
+{% set heading = 'Add a phone number (optional)' %}
 
 {% block content %}
   <div class="grid-row">
