--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmission.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullAdmission.njk
@@ -2,18 +2,15 @@
 {% from "form.njk" import linkButton %}
 
 {% macro claimFullAdmissionForDefendantDashboard(claim) %}
-  {% if claim.response.paymentIntention.paymentDate %}
-    {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
-  {% endif %}
 
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    {% set paymentMethod = 'immediately' %}
+    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount immediately.') }}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {% set paymentMethod = 'by ' + paymentDate %}
+    {% set paymentMethod = 'by ' + claim.response.paymentIntention.paymentDate | date %}
+    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount {{ paymentMethod}}.', { paymentMethod: paymentMethod }) }}
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    {% set paymentMethod= 'in instalments' %}
+    {{ t('You’ve admitted all of the claim and offered to pay the full amount in instalments.') }}
   {% endif %}
-  {{ t('You’ve admitted all of the claim and said you’ll pay the full amount {{ paymentMethod}}.', { paymentMethod: paymentMethod }) }}
 {% endmacro %}
 
 {% macro claimFullAdmissionForDefendantClaimDetails(claim) %}
@@ -76,14 +73,14 @@
     <h2 class="heading-small">{{ t('The defendant will pay you immediately') }}</h2>
     <p> {{ t('The defendant said they’ll pay you immediately. They must make sure you have the money by 4pm on {{ paymentDate }}.',
         { paymentDate: paymentDate }) }} </p>
-    <p> {{ t('You need to tell us if you’ve settled the claim because the defendant has paid you.') }} </p>
-    <p> {{ t('You can settle for less than the full claim amount.') }} </p>
+    <h2 class="heading-small"> {{ t('If the defendant pays you.') }} </h2>
+    <p> {{ t('You need to email moneyclaims@hmcts.gsi.gov.uk to let us know. Include the date you were paid.') }} </p>
     {% if claim.pastDefendantPayImmediatelyDate %}
-      <h2 class="heading-small">{{ t('The defendant will pay you immediately') }}</h2>
-      <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', {paymentDate: paymentDate}) }} </p>
-    {% else %}
       <h2 class="heading-small">{{ t('What to do if they haven’t paid') }}</h2>
       <p> {{ t('If the defendant doesn’t pay you, you can request a County Court Judgment.') }} </p>
+    {% else %}
+      <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
+      <div> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', {paymentDate: paymentDate}) }} </div>
     {% endif %}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     <p> {{ t('{{ defendantName }} admits they owe all the money. They’ve offered to pay you in full by {{ paymentDate }}.',
@@ -97,6 +94,8 @@
     <p>
       {{ t('You can accept or reject their offer.') }}
     </p>
+    <a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t('View and respond to offer') }}</a>
+
   {% endif %}
 {% endmacro %}
 
@@ -112,5 +111,5 @@
 {% endmacro %}
 
 {% macro _downloadResponseLink(claim) %}
-  <a href="{{ ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download your response') }}</a>
+  <a href="{{ ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download your response') }}</a>{{ t(' (PDF)') }}
 {% endmacro %}
