Defendant confirmation page changes
1. Changed 'your claim reference to claim number'
2. Removed the 'your response' heading from below the green box
3. Changed 'defence' to 'response' in the line underneat the green box.
4. Deleted the line that appears linking them to the dashboard which read 'view the claim against you and your response' - we already link to the dashboard further down the page.
5. Made the info about the case being reviewed and the hearing less passive, the court will review the case and you might have to go to a hearing.
6. Changed 'may' to 'can' in the settle section.
7. Changed 'fix' to 'repair'

--- a/src/main/features/response/views/confirmation.njk
+++ b/src/main/features/response/views/confirmation.njk
@@ -11,7 +11,7 @@
       <div class="govuk-box-highlight">
         <h1 class="bold-large">{{ t('You’ve submitted your response') }}</h1>
         <p class="reference-number">
-          <span>{{ t('Your claim reference:') }}</span>
+          <span>{{ t('Claim number:') }}</span>
           <span class="block bold-large">{{ claim.claimNumber }}</span>
         </p>
         <p>
@@ -22,7 +22,6 @@
         </p>
       </div>
 
-      <h2 class="bold-large form-group">{{ t('Your response') }}</h2>
 
       {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
         {% include "./confirmation/full-admission.njk" %}
