--- a/src/main/features/response/views/confirmation/full-defence.njk
+++ b/src/main/features/response/views/confirmation/full-defence.njk
@@ -1,2 +1,1 @@
-<p>{{ t('We’ve emailed {{ claimant }} your defence, explaining why you reject the claim.', { claimant: claim.claimData.claimant.name }) }}</p>
-<p>{{ t('View the <a href="{{ link }}">claim against you and your response.</a>', { link: DashboardPaths.dashboardPage.uri }) | safe }}</p>
+<p>{{ t('We’ve emailed {{ claimant }} your response, explaining why you reject the claim.', { claimant: claim.claimData.claimant.name }) }}</p>
