--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -1,10 +1,12 @@
 {% set claimantName = claim.claimData.claimant.name %}
 
 <p>{{ t('If {{ claimantName }} accepts your defence the claim will be cancelled.', { claimantName: claimantName }) | safe }}</p>
-<p>{{ t('If they reject your defence the case will be reviewed and might go to a hearing.') }}</p>
+<p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
+
+
 
 <h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
-<p>{{ t('You may still <a href="{{ link }}">settle the claim out of court</a>. For example you could offer to fix goods you sold the claimant or suggest a payment.',
+<p>{{ t('You can still <a href="{{ link }}">settle the claim out of court</a>. For example you could offer to repair goods you sold the claimant or suggest a payment.',
     { link: OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
 <p>{{ t('You can avoid getting a County Court Judgment if the claimant accepts your offer.') }}</p>
 
