--- a/src/main/views/macro/paymentPlan.njk
+++ b/src/main/views/macro/paymentPlan.njk
@@ -1,31 +1,22 @@
-{% macro paymentPlanTable(claim, lastPayment, lengthOfPayment) %}
-  <details>
-    <div class="panel panel-border-narrow">
-      <table class="table-form">
-        <thead>
-        <tr>
-          <th scope="col">{{ t('How they want to pay') }}</th>
-        </tr>
-        </thead>
-        <tbody>
-            <tr>
-              <td scope="col">{{ t('Monthly instalments of') }}</td>
-              <td class="numeric last">{{ claim.response.repaymentPlan.instalmentAmount }}</td>
-            </tr>
-            <tr>
-              <td scope="col">{{ t('Make the first payment on') }}</td>
-              <td class="numeric last">{{ claim.response.repaymentPlan.firstPaymentDate }}</td>
-            </tr>
-            <tr>
-              <td scope="col">{{ t('Last Payment on') }}</td>
-              <td class="numeric last">{{ lastPayment | numeral }}</td>
-            </tr>
-            <tr>
-              <td class="bold-small" scope="row">{{ t('Length of repayment plan') }}</td>
-              <td class="bold-small numeric last">{{ lengthOfPayment | numeral }}</td>
-            </tr>
-        </tbody>
-      </table>
+{% macro paymentPlanTable(id, instalmentAmount, firstPaymentDate, lastPaymentOn, lengthOfPayment) %}
+  <fieldset id="{{ id }}" class="form-group">
+    <legend>
+      <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
+    </legend>
+    {{ row('Monthly installment of', instalmentAmount | numeral) }}
+    {{ row('Make the first payment on', firstPaymentDate | date) }}
+    {{ row('Last payment on', lastPaymentOn | date) }}
+    {{ row('Length of repayment plan', lengthOfPayment) }}
+  </fieldset>
+{% endmacro %}
+
+{% macro row(label, value) %}
+  <div class="bottom-border">
+    <div class="column-one-half  {% if not label %}if-empty{% endif %}">
+      <span> {{ t( label ) }}</span>
     </div>
-  </details>
+    <div class="column-one-half {% if not value %}if-empty{% endif %}">
+      <span>{{ value }}</span>
+    </div>
+  </div>
 {% endmacro %}
