--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -6,8 +6,8 @@
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
     {{ t('You’ve admitted all of the claim and said you’ll pay the full amount immediately.') }}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {% set paymentMethod = 'by ' + claim.response.paymentIntention.paymentDate | date %}
-    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount {{ paymentMethod}}.', { paymentMethod: paymentMethod }) }}
+    {{ t('You’ve admitted all of the claim and said you’ll pay the full amount by {{ paymentMethod }}.',
+      { paymentMethod: claim.response.paymentIntention.paymentDate | date }) }}
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {{ t('You’ve admitted all of the claim and offered to pay the full amount in instalments.') }}
   {% endif %}
@@ -40,7 +40,7 @@
     </p>
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
-    {% set repaymentDate = claim.response.paymentIntention.repaymentPlan.firstPaymentDate |date %}
+    {% set repaymentDate = claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date %}
     {% set paymentSchedule = repaymentPlan.paymentSchedule | renderPaymentSchedule %}
 
     <p> {{ t('You’ve offered to pay {{ claimantName }} {{ amount }} {{ paymentSchedule }} starting {{ repaymentDate }}.',
@@ -69,9 +69,9 @@
     <h2 class="heading-small">{{ t('The defendant will pay you immediately') }}</h2>
     <p> {{ t('The defendant said they’ll pay you immediately. They must make sure you have the money by 4pm on {{ paymentDate }}.',
         { paymentDate: paymentDate }) }} </p>
-    <h2 class="heading-small"> {{ t('If the defendant pays you.') }} </h2>
-    <p> {{ t('You need to email moneyclaims@hmcts.gsi.gov.uk to let us know. Include the date you were paid.') }} </p>
-    {% if claim.response.paymentIntention.pastDefendantPayImmediatelyDate %}
+    <h2 class="heading-small"> {{ t('If the defendant pays you') }} </h2>
+    <p> {{ t('You need to email {{ supportMail }} to let us know. Include the date you were paid.', {supportMail: supportEmailAddress }) }} </p>
+    {% if claim.response.paymentIntention.isPastPaymentDeadline %}
       <h2 class="heading-small">{{ t('What to do if they haven’t paid') }}</h2>
       <p> {{ t('If the defendant doesn’t pay you, you can request a County Court Judgment.') }} </p>
     {% else %}
@@ -98,7 +98,7 @@
 {% macro claimFullAdmissionForClaimantDashboard(claim) %}
 
   {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-  {{ t('The defendant admits they owe all the money. They’ve said that they will pay immediately.') }}
+    {{ t('The defendant admits they owe all the money. They’ve said that they will pay immediately.') }}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     {{ t('The defendant admits they owe all the money. You need to accept or reject their offer.') }}
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
