--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmitted.njk
@@ -25,16 +25,14 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedAlreadyPaidForClaimantClaimDetails(claim) %}
-  {% set paymentDate = claim.response.paymentDeclaration.paidDate | date %}
-
   <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
   <p>
     {{ t('{{ defendantName }} says they paid you {{ amount }} on {{ paymentDate }}.',
-      { defendantName: claim.claimData.defendant.name, amount: claim.response.amount | numeral, paymentDate: paymentDate }) }}
+      { defendantName: claim.claimData.defendant.name, amount: claim.response.amount | numeral, paymentDate: claim.response.paymentDeclaration.paidDate | date }) }}
   </p>
   <p> {{ t('You can accept or reject this response.') }}</p>
   <p>
-    {{ t('You need to respond before 4pm on {{ respondDate}} or your claim won’t proceed.', {respondDate: claim.respondToResponseDeadline | date}) }}
+    {{ t('You need to respond before 4pm on {{ respondDate }} or your claim won’t proceed.', {respondDate: claim.respondToResponseDeadline | date}) }}
   </p>
 {% endmacro %}
 
@@ -48,22 +46,23 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForDefendantClaimDetails(claim) %}
-
-  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-    {% set paymentMethod = 'immediately' %}
-  {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {% set paymentMethod = 'on ' + claim.response.paymentIntention.paymentDate | date %}
-  {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
-    {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
-    {% set paymentSchedule = repaymentPlan.paymentSchedule | renderPaymentSchedule %}
-    {% set paymentMethod =  installmentAmount + ' ' + paymentSchedule + ' starting '+ repaymentPlan.firstPaymentDate |date %}
-  {% endif %}
-
   <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
+
   <p>
-    {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ paymentMethod }}.',
-      { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name, paymentMethod: paymentMethod }) }}
+    {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+      {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} immediately.',
+        { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name }) }}
+    {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} on {{ paymentMethod }}.',
+        { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name, paymentMethod: claim.response.paymentIntention.paymentDate | date }) }}
+    {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+      {% set repaymentPlan = claim.response.paymentIntention.repaymentPlan %}
+      {% set installmentAmount = repaymentPlan.instalmentAmount | numeral %}
+      {% set paymentSchedule = repaymentPlan.paymentSchedule | renderPaymentSchedule %}
+      {{ t('You’ve said you owe {{ amount }} and offered to pay {{ claimantName }} {{ installmentAmount }} {{ paymentSchedule }} starting {{ paymentDate }}.',
+        { amount: claim.response.amount | numeral, claimantName: claim.claimData.claimant.name,
+          installmentAmount: installmentAmount, paymentSchedule: paymentSchedule, paymentDate: repaymentPlan.firstPaymentDate | date }) }}
+    {% endif %}
   </p>
   <p>
     {{ t('We’ll contact you when they respond.') }}
@@ -80,7 +79,7 @@
       {defendantName: claim.claimData.defendant.name, amount: claim.response.amount | numeral}) }} </p>
   <p>
     {{ t('You need to accept or reject the defendant’s admission of {{ amount }}.',
-      { amount: claim.response.amount | numeral}) }}
+      { amount: claim.response.amount | numeral }) }}
   </p>
 {% endmacro %}
 
