--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -76,7 +76,7 @@
       <p> {{ t('If the defendant doesn’t pay you, you can request a County Court Judgment.') }} </p>
     {% else %}
       <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
-      <div> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', {paymentDate: paymentDate}) }} </div>
+      <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', {paymentDate: paymentDate}) }} </p>
     {% endif %}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     <p> {{ t('{{ defendantName }} admits they owe all the money. They’ve offered to pay you in full by {{ paymentDate }}.',
@@ -84,6 +84,7 @@
     <p>
       {{ t('You can accept or reject their offer.') }}
     </p>
+    <a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t('View and respond to offer') }}</a>
   {% elseif  claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
     <p> {{ t('{{ defendantName }} admits they owe all the money. They’ve offered to pay you in instalments.',
         { defendantName: defendantName }) }} </p>
